quick fix to a z-index issue

--- a/public/stylesheets/topics.css
+++ b/public/stylesheets/topics.css
@@ -194,7 +194,7 @@ p:hover .icn{display: inline;}
 .story,.experience{background-position: 0 -28px;}*/
 
 .topic-avatars{}
-.topic-avatars > li{float:left;width:64px;text-align:center;font-size:12px;position:relative;margin:0 18px 14px;}
+.topic-avatars > li{float:right;width:64px;text-align:center;font-size:12px;position:relative;margin:0 18px 14px;}
 .topic-avatars .avatar{margin-bottom: 10px}
 .topic-avatars em{color:#468AC4}
 /*.topic-avatars > li:nth-child(2n+1){margin-right:20px;}*/
